creo function per aggiungere testo

--- a/style.css
+++ b/style.css
@@ -7,4 +7,28 @@
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    
 }
+
+
+.todo-container  {
+    margin-top: 100px;
+    border: 1px solid black;
+    padding:20px;
+}
+
+.todo-container ul {
+    list-style-type: none;
+    padding:20px 10px;
+    margin: 10px 0px;
+    background-color: green;
+}
+
+.todo-container li {
+    padding:10px 0;
+}
+
+.textline {
+    text-decoration: line-through;
+}
+
